# serializer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES  NOTICE.md  README.md  SECURITY  SECURITY.md  pom.xml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: generate-maven-sbom.yml  maven-release.yml  maven_build.yml  maven_build_25.yml  maven_build_win.yml  maven_deploy_snapshot.yml  maven_deploy_snapshot_dev.yml  maven_it_test.yml  maven_javadoc.yml  maven_jni_25.yml  maven_licence_check.yml  maven_release.yml
afs/: pom.xml
afs/afs/: pom.xml
base/: pom.xml
base/src/: module-info.java
codegen/: pom.xml
codegen/entity/: pom.xml
codegen/wrapping/: pom.xml
communication/: pom.xml
communication/binary/: pom.xml
communication/communication/: pom.xml
configuration/: pom.xml
configuration/configuration/: pom.xml
configuration/hocon/: pom.xml
configuration/yaml/: pom.xml
integration-tests/: pom.xml
nativememory/: CMakeLists.txt  README.md  pom.xml
nativememory/src/main/cpp/: CMakeLists.txt  org_eclipse_serializer_nativememory_NativeMemoryAccessor.cpp  org_eclipse_serializer_nativememory_NativeMemoryAccessor.h
nativememory/src/main/java/: module-info.java
nativememory/src/main/java/org/eclipse/serializer/nativememory/: LibraryLoader.java  NativeLibraryJarLoader.java  NativeMemoryAccessor.java  NativeMemoryAccessorDebug.java  NativeMemoryAccessorProvider.java
persistence/: pom.xml
persistence/binary/: pom.xml
persistence/binary-android/: pom.xml
serializer/: pom.xml
test-fixtures/: pom.xml
tests/: pom.xml
(+1573 files in other folders)
