cmake_minimum_required (VERSION 3.12)

project ("EclipseStoreNativeMemory")

set(PROJECT_LIBRARY_OUTPUT_DIR "${PROJECT_SOURCE_DIR}/target/libs")
 
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_LIBRARY_OUTPUT_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_LIBRARY_OUTPUT_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_LIBRARY_OUTPUT_DIR}")
 
 #no debug or release sub dirs...
foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${PROJECT_LIBRARY_OUTPUT_DIR}")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${PROJECT_LIBRARY_OUTPUT_DIR}")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${PROJECT_LIBRARY_OUTPUT_DIR}")
endforeach()

add_subdirectory ("src/main/cpp")
